Bug 252591 - [JSC] Fix new BBQ argument clobbering
Summary: [JSC] Fix new BBQ argument clobbering
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-20 12:00 PST by Yusuke Suzuki
Modified: 2023-02-20 13:13 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2023-02-20 12:00:17 PST
...
Comment 1 Radar WebKit Bug Importer 2023-02-20 12:00:58 PST
<rdar://problem/105689899>
Comment 2 Yusuke Suzuki 2023-02-20 12:02:18 PST
Pull request: https://github.com/WebKit/WebKit/pull/10377
Comment 3 EWS 2023-02-20 13:13:49 PST
Committed 260560@main (29a0479df370): <https://commits.webkit.org/260560@main>

Reviewed commits have been landed. Closing PR #10377 and removing active labels.