[JSC] Fix new BBQ argument clobbering https://bugs.webkit.org/show_bug.cgi?id=252591 rdar://105689899

Reviewed by Mark Lam.

This patch makes Wasm BBQ prologue not to allocate scratch registers and report clobbered argument registers correctly.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJIT::emitEntryTierUpCheck):
(JSC::Wasm::BBQJIT::addTopLevel):

Canonical link: https://commits.webkit.org/260560@main